src/parser/CmmParser.java
// Generated from /home/ae-user/dlp-labs/src/parser/Cmm.g4 by ANTLR 4.9.2
package parser;

    import ast.*;
    import ast.expressions.*;
    import ast.program.*;
    import ast.statements.*;
    import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, COMMENT=37, MULTI_LINE_COMMENT=38, 
		ID=39, INT_CONSTANT=40, REAL_CONSTANT=41, CHAR_CONSTANT=42, WB=43;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_variableDefinition = 2, RULE_mainFunction = 3, 
		RULE_functionBody = 4, RULE_statement = 5, RULE_expression = 6, RULE_type = 7, 
		RULE_structType = 8, RULE_returnType = 9, RULE_builtIn = 10, RULE_condition = 11, 
		RULE_block = 12, RULE_invocation = 13, RULE_arguments = 14, RULE_expressions = 15, 
		RULE_structFields = 16, RULE_structField = 17, RULE_parameters = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "variableDefinition", "mainFunction", "functionBody", 
			"statement", "expression", "type", "structType", "returnType", "builtIn", 
			"condition", "block", "invocation", "arguments", "expressions", "structFields", 
			"structField", "parameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "';'", "'void'", "'main'", "'{'", "'}'", "'='", 
			"'while'", "'if'", "'else'", "'read'", "'write'", "'return'", "'['", 
			"']'", "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", 
			"'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", "'struct'", "'int'", "'char'", 
			"'double'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "COMMENT", "MULTI_LINE_COMMENT", "ID", "INT_CONSTANT", "REAL_CONSTANT", 
			"CHAR_CONSTANT", "WB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> aux = new ArrayList<>();
		public DefinitionContext definition;
		public MainFunctionContext mainFunction;
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(38);
					((ProgramContext)_localctx).definition = definition();
					 _localctx.aux.addAll(((ProgramContext)_localctx).definition.ast); 
					}
					} 
				}
				setState(45);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(46);
			((ProgramContext)_localctx).mainFunction = mainFunction();
			setState(47);
			match(EOF);

			                _localctx.aux.add(((ProgramContext)_localctx).mainFunction.ast);
			                ((ProgramContext)_localctx).ast =  new Program(0, 0, _localctx.aux);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public ReturnTypeContext returnType;
		public Token name;
		public ParametersContext parameters;
		public FunctionBodyContext functionBody;
		public VariableDefinitionContext variableDefinition;
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public VariableDefinitionContext variableDefinition() {
			return getRuleContext(VariableDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				((DefinitionContext)_localctx).returnType = returnType();
				setState(51);
				((DefinitionContext)_localctx).name = match(ID);
				setState(52);
				match(T__0);
				setState(53);
				((DefinitionContext)_localctx).parameters = parameters();
				setState(54);
				match(T__1);
				setState(55);
				((DefinitionContext)_localctx).functionBody = functionBody();

				                _localctx.ast.add(new FunctionDefinition(
				                    ((DefinitionContext)_localctx).returnType.ast.getLine(),
				                    ((DefinitionContext)_localctx).returnType.ast.getColumn(),
				                    (((DefinitionContext)_localctx).name!=null?((DefinitionContext)_localctx).name.getText():null),
				                    ((DefinitionContext)_localctx).functionBody.ast,
				                    new FunctionType(
				                        ((DefinitionContext)_localctx).returnType.ast.getLine(),
				                        ((DefinitionContext)_localctx).returnType.ast.getColumn(),
				                        (((DefinitionContext)_localctx).name!=null?((DefinitionContext)_localctx).name.getText():null),
				                        ((DefinitionContext)_localctx).returnType.ast,
				                        ((DefinitionContext)_localctx).parameters.ast
				                    )
				                ));
				            
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				((DefinitionContext)_localctx).variableDefinition = variableDefinition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).variableDefinition.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<>();
		public TypeContext t1;
		public Token name1;
		public Token name2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((VariableDefinitionContext)_localctx).t1 = type(0);
			setState(64);
			((VariableDefinitionContext)_localctx).name1 = match(ID);
			 _localctx.ast.add(new VariableDefinition(
			                ((VariableDefinitionContext)_localctx).name1.getLine(),
			                ((VariableDefinitionContext)_localctx).name1.getCharPositionInLine() + 1,
			                (((VariableDefinitionContext)_localctx).name1!=null?((VariableDefinitionContext)_localctx).name1.getText():null),
			                ((VariableDefinitionContext)_localctx).t1.ast));
			            
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(66);
				match(T__2);
				setState(67);
				((VariableDefinitionContext)_localctx).name2 = match(ID);
				 _localctx.ast.add(new VariableDefinition(
				               ((VariableDefinitionContext)_localctx).name1.getLine(),
				               ((VariableDefinitionContext)_localctx).name1.getCharPositionInLine() + 1,
				               (((VariableDefinitionContext)_localctx).name2!=null?((VariableDefinitionContext)_localctx).name2.getText():null),
				               ((VariableDefinitionContext)_localctx).t1.ast));
				            
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token typeID;
		public Token name;
		public FunctionBodyContext functionBody;
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((MainFunctionContext)_localctx).typeID = match(T__4);
			setState(77);
			((MainFunctionContext)_localctx).name = match(T__5);
			setState(78);
			match(T__0);
			setState(79);
			match(T__1);
			setState(80);
			((MainFunctionContext)_localctx).functionBody = functionBody();

			                ((MainFunctionContext)_localctx).ast =  new FunctionDefinition(
			                    ((MainFunctionContext)_localctx).typeID.getLine(),
			                    ((MainFunctionContext)_localctx).typeID.getCharPositionInLine() + 1,
			                    (((MainFunctionContext)_localctx).name!=null?((MainFunctionContext)_localctx).name.getText():null),
			                    ((MainFunctionContext)_localctx).functionBody.ast,
			                    new FunctionType(
			                        ((MainFunctionContext)_localctx).typeID.getLine(),
			                        ((MainFunctionContext)_localctx).typeID.getCharPositionInLine() + 1,
			                        (((MainFunctionContext)_localctx).name!=null?((MainFunctionContext)_localctx).name.getText():null),
			                        new ast.types.Void(((MainFunctionContext)_localctx).typeID.getLine(), ((MainFunctionContext)_localctx).typeID.getCharPositionInLine() + 1),
			                        new ArrayList()
			                    )
			                );
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<>();
		public VariableDefinitionContext variableDefinition;
		public StatementContext statement;
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__6);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35))) != 0)) {
				{
				{
				setState(84);
				((FunctionBodyContext)_localctx).variableDefinition = variableDefinition();
				 _localctx.ast.addAll(((FunctionBodyContext)_localctx).variableDefinition.ast); 
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__18) | (1L << T__19) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(92);
				((FunctionBodyContext)_localctx).statement = statement();
				 _localctx.ast.addAll(((FunctionBodyContext)_localctx).statement.ast); 
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public Token aux;
		public ConditionContext c1;
		public BlockContext b1;
		public BlockContext b2;
		public ExpressionsContext expressions;
		public InvocationContext invocation;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public InvocationContext invocation() {
			return getRuleContext(InvocationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				((StatementContext)_localctx).e1 = expression(0);
				setState(103);
				match(T__8);
				setState(104);
				((StatementContext)_localctx).e2 = expression(0);
				setState(105);
				match(T__3);
				 _localctx.ast.add(new Assignment(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).e2.ast)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				((StatementContext)_localctx).aux = match(T__9);
				setState(109);
				((StatementContext)_localctx).c1 = condition();
				setState(110);
				((StatementContext)_localctx).b1 = block();
				 _localctx.ast.add(new While(((StatementContext)_localctx).aux.getLine(), ((StatementContext)_localctx).aux.getCharPositionInLine() + 1, ((StatementContext)_localctx).c1.ast, ((StatementContext)_localctx).b1.ast)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				((StatementContext)_localctx).aux = match(T__10);
				setState(114);
				((StatementContext)_localctx).c1 = condition();
				setState(115);
				((StatementContext)_localctx).b1 = block();
				 _localctx.ast.add(new If(((StatementContext)_localctx).aux.getLine(), ((StatementContext)_localctx).aux.getCharPositionInLine() + 1, ((StatementContext)_localctx).c1.ast, ((StatementContext)_localctx).b1.ast)); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				((StatementContext)_localctx).aux = match(T__10);
				setState(119);
				((StatementContext)_localctx).c1 = condition();
				setState(120);
				((StatementContext)_localctx).b1 = block();
				setState(121);
				match(T__11);
				setState(122);
				((StatementContext)_localctx).b2 = block();
				 _localctx.ast.add(new If(((StatementContext)_localctx).aux.getLine(), ((StatementContext)_localctx).aux.getCharPositionInLine() + 1, ((StatementContext)_localctx).c1.ast, ((StatementContext)_localctx).b1.ast, ((StatementContext)_localctx).b2.ast)); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				((StatementContext)_localctx).aux = match(T__12);
				setState(126);
				((StatementContext)_localctx).expressions = expressions();
				setState(127);
				match(T__3);
				 ((StatementContext)_localctx).expressions.ast
				                .forEach(e -> _localctx.ast.add(new Read(
				                    ((StatementContext)_localctx).aux.getLine(),
				                    ((StatementContext)_localctx).aux.getCharPositionInLine() + 1,
				                    e
				                )));
				            
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				((StatementContext)_localctx).aux = match(T__13);
				setState(131);
				((StatementContext)_localctx).expressions = expressions();
				setState(132);
				match(T__3);
				 ((StatementContext)_localctx).expressions.ast
				                .forEach(e -> _localctx.ast.add(new Write(
				                    ((StatementContext)_localctx).aux.getLine(),
				                    ((StatementContext)_localctx).aux.getCharPositionInLine() + 1,
				                    e
				                )));
				            
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(135);
				((StatementContext)_localctx).aux = match(T__14);
				setState(136);
				((StatementContext)_localctx).e1 = expression(0);
				setState(137);
				match(T__3);
				 _localctx.ast.add(new Return(((StatementContext)_localctx).aux.getLine(), ((StatementContext)_localctx).aux.getCharPositionInLine() + 1, ((StatementContext)_localctx).e1.ast)); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				((StatementContext)_localctx).invocation = invocation();
				setState(141);
				match(T__3);
				 _localctx.ast.add(((StatementContext)_localctx).invocation.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
